vlib/v/checker/tests/result_type_alias_err.vv
type Abc = !int

dump(Abc(5))
